# Sesiones-Piero

./: CMakeLists.txt  changeMats  changeMats.cpp  example1  example1.cpp  example2  example2.cpp  main  main.cpp  march01.cpp  sesiones
01-03/: Arr_Puntero1.cpp  Arr_Puntero2.cpp  Arr_Puntero3  Arr_Puntero3.cpp  march02.cpp
01-03/Practice/: Arr_Puntero_ej01  Arr_Puntero_ej01.cpp  Arr_Puntero_ej01_post.cpp  Arr_Puntero_ej02  Arr_Puntero_ej03.cpp  Arr_Puntero_ej04.cpp
01-03/Teory/: Arr_Puntero2  march02  march03
08-03/: finalArr.cpp
24-02/: example2.cpp  sumMat  sumMat.cpp
ARRAYS/01-03/Practice/: Arr_Puntero_ej01  Arr_Puntero_ej01.cpp  Arr_Puntero_ej01_post  Arr_Puntero_ej02.cpp  Arr_Puntero_ej03.cpp  Arr_Puntero_ej04
ARRAYS/01-03/Teory/: Arr_Puntero2.cpp  Arr_Puntero3  Arr_Puntero3.cpp
ARRAYS/08-03/: finalArr  utils.cpp
ARRAYS/24-02/: example1  example1.cpp  example2-Piero.cpp  temp-main
MATRICES/13-03/: IntroMatriz.cpp  exercise01  exercise01.cpp  exercise02  exercise02.cpp  exercise03  exercise03.cpp  exercise04  exercise04.cpp
MATRICES/14-03/: exercice functions  exercice functions.cpp  functions_exercise  functions_exercise.cpp  pointers_and_reference.cpp
