cmake_minimum_required(VERSION 4.1)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        24-02/example1.cpp
        24-02/example2.cpp
        24-02/example2-Piero.cpp
        24-02/sumMat.cpp
        24-02/changeMats.cpp
        01-03/Teory/march01.cpp
        01-03/Teory/Arr_Puntero1.cpp)
